fixed styles on mobile screen

--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -1,7 +1,7 @@
 .header {
     z-index: 100;
     background-color: #fff;
-    width: 100%;
+    /* width: 100%; */
     padding: 16px 24px;
     /* position: fixed; */
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
